force-app/main/default/objects/PowerOfAttorney__c/PowerOfAttorney__c.object-meta.xml
<CustomObject>
    <description>A place to record details of a Power of Attorney (POA) that a customer may have in place.</description>
    <label>Power of attorney</label>
    <nameField>
        <displayFormat>POA-{00000}</displayFormat>
        <label>POA number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Powers of attorney</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>