force-app/main/default/objects/PowerOfAttorney__c/fields/ActivatedDate__c.field-meta.xml
<CustomField>
    <fullName>ActivatedDate__c</fullName>
    <description>The date from which decisions are delegated</description>
    <label>Activated date</label>
    <type>Date</type>
</CustomField>