force-app/main/default/objects/PowerOfAttorney__c/fields/DateActivated__c.field-meta.xml
<CustomField>
    <fullName>DateActivated__c</fullName>
    <description>The date from which decisions are delegated</description>
    <inlineHelpText>The date from which decisions are delegated</inlineHelpText>
    <label>Date activated</label>
    <type>Date</type>
</CustomField>