force-app/main/default/objects/PowerOfAttorney__c/fields/DateOfEnd__c.field-meta.xml
<CustomField>
    <fullName>DateOfEnd__c</fullName>
    <description>The date from which decisions are no longer delegated</description>
    <inlineHelpText>The date from which decisions are no longer delegated</inlineHelpText>
    <label>Date of end</label>
    <type>Date</type>
</CustomField>