force-app/main/default/objects/PowerOfAttorney__c/fields/DateSigned__c.field-meta.xml
<CustomField>
    <fullName>DateSigned__c</fullName>
    <description>The date the POA is put in place</description>
    <inlineHelpText>The date the POA is put in place</inlineHelpText>
    <label>Date signed</label>
    <type>Date</type>
</CustomField>