force-app/main/default/objects/PowerOfAttorney__c/fields/DecisionMaking__c.field-meta.xml
<CustomField>
    <fullName>DecisionMaking__c</fullName>
    <description>Records whether decisions made by attorneys will be made:
- ‘jointly and severally’ - on their own or with other attorneys
- ‘jointly’ - all the attorneys have to agree on the decision
- mixed - some decisions ‘jointly’ and others ‘jointly and severally’</description>
    <label>Decision making</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JOINTLY</fullName>
                <label>Jointly</label>
            </value>
            <value>
                <fullName>JOINTLY_AND_SEVERALLY</fullName>
                <label>Jointly and severally</label>
            </value>
            <value>
                <fullName>MIXED</fullName>
                <label>Mixed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>