force-app/main/default/objects/PowerOfAttorney__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the person who is/may delegate decision making abilities to someone else</description>
    <inlineHelpText>This is the person who is/may delegate decision making abilities to someone else</inlineHelpText>
    <label>Donor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Powers of attorney</relationshipLabel>
    <relationshipName>PowersOfAttorney</relationshipName>
    <type>Lookup</type>
</CustomField>