force-app/main/default/objects/PowerOfAttorney__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The date from which decisions are no longer delegated</description>
    <label>End date</label>
    <type>Date</type>
</CustomField>