force-app/main/default/objects/PowerOfAttorney__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any notes we may want to capture with supplementary information on the POA like restrictions.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>