force-app/main/default/objects/PowerOfAttorney__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>The region in which the POA is legally binding.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ENGLAND_WALES</fullName>
                <label>England and Wales</label>
            </value>
            <value>
                <fullName>NORTHERN_IRELAND</fullName>
                <label>Northern Ireland</label>
            </value>
            <value>
                <fullName>SCOTLAND</fullName>
                <label>Scotland</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>