force-app/main/default/objects/PowerOfAttorney__c/fields/RegisteredDate__c.field-meta.xml
<CustomField>
    <fullName>RegisteredDate__c</fullName>
    <description>The data the POA was registered officially with the government body responsible.</description>
    <inlineHelpText>The data the POA was registered officially with the government body responsible.</inlineHelpText>
    <label>Registered date</label>
    <type>Date</type>
</CustomField>