force-app/main/default/objects/PowerOfAttorney__c/fields/SignedDate__c.field-meta.xml
<CustomField>
    <fullName>SignedDate__c</fullName>
    <description>The date the POA was signed by the donor.</description>
    <inlineHelpText>The date the POA was signed by the donor.</inlineHelpText>
    <label>Signed date</label>
    <type>Date</type>
</CustomField>