force-app/main/default/objects/PowerOfAttorney__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates which kind of POA this represents</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lasting Power Of Attorney (Health &amp; Welfare)</fullName>
            </value>
            <value>
                <fullName>Lasting Power Of Attorney (Property &amp; Financial Affairs)</fullName>
            </value>
            <value>
                <fullName>Ordinary Power Of Attorney</fullName>
            </value>
            <value>
                <fullName>Enduring Power Of Attorney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>